<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/toolbar_item1"
        android:orderInCategory="100"
        android:title="@string/name_item1"
        app:showAsAction="never" />
    <item
        android:id="@+id/toolbar_item2"
        android:orderInCategory="100"
        android:title="@string/name_item2"
        app:showAsAction="never" />
    <item
        android:id="@+id/toolbar_item3"
        android:orderInCategory="100"
        android:title="@string/name_item3"
        app:showAsAction="never" />
    <item
        android:id="@+id/toolbar_item4"
        android:orderInCategory="100"
        android:title="@string/name_item4"
        app:showAsAction="never" />
    <item
        android:id="@+id/toolbar_item5"
        android:orderInCategory="100"
        android:title="@string/name_item5"
        app:showAsAction="never" />

</menu>
