<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anm_btn_fade_in"
        android:id="@+id/btn_fade_in"
        android:layout_above="@+id/btn_cross_fade"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/animation_tv"
        android:layout_toLeftOf="@+id/animation_tv"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anm_btn_fade_out"
        android:id="@+id/btn_fade_out"
        android:layout_alignTop="@+id/btn_fade_in"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/animation_tv"
        android:layout_toRightOf="@id/animation_tv"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anm_btn_cross_fade"
        android:id="@+id/btn_cross_fade"
        android:layout_above="@+id/btn_zoom_in"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/btn_fade_in"
        android:layout_alignEnd="@+id/btn_fade_in" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anm_btn_blink"
        android:id="@+id/btn_blink"
        android:layout_below="@+id/btn_fade_out"
        android:layout_alignRight="@+id/btn_move"
        android:layout_alignEnd="@+id/btn_move"
        android:layout_alignLeft="@+id/btn_fade_out"
        android:layout_alignStart="@+id/btn_fade_out" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anm_btn_zoom_in"
        android:id="@+id/btn_zoom_in"
        android:layout_above="@+id/btn_rotate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/btn_cross_fade"
        android:layout_alignEnd="@+id/btn_cross_fade" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anm_btn_zoom_out"
        android:id="@+id/btn_zoom_out"
        android:layout_below="@+id/btn_blink"
        android:layout_alignRight="@+id/btn_blink"
        android:layout_alignEnd="@+id/btn_blink"
        android:layout_alignLeft="@+id/btn_blink"
        android:layout_alignStart="@+id/btn_blink" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anm_btn_rotate"
        android:id="@+id/btn_rotate"
        android:layout_above="@+id/btn_slide_up"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/btn_zoom_in"
        android:layout_alignEnd="@+id/btn_zoom_in" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anm_btn_move"
        android:id="@+id/btn_move"
        android:layout_below="@+id/btn_zoom_out"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"

        android:layout_alignLeft="@+id/btn_fade_out"
        android:layout_alignStart="@+id/btn_fade_out" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anm_btn_slide_up"
        android:id="@+id/btn_slide_up"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/btn_rotate"
        android:layout_alignEnd="@+id/btn_rotate" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anm_btn_slide_down"
        android:id="@+id/btn_slide_down"
        android:layout_alignTop="@+id/btn_slide_up"
        android:layout_alignRight="@+id/btn_move"
        android:layout_alignEnd="@+id/btn_move"

        android:layout_alignLeft="@+id/btn_move"
        android:layout_alignStart="@+id/btn_move" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anm_btn_bounce"
        android:id="@+id/btn_bounce"
        android:layout_below="@+id/btn_slide_up"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anm_btn_sequential"
        android:id="@+id/btn_sequential"
        android:layout_below="@+id/btn_bounce"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anm_btn_together"
        android:id="@+id/btn_together"
        android:layout_below="@+id/btn_sequential"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/animation_tv"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/anima_tv_text"
        android:id="@+id/animation_tv2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

</RelativeLayout>
