<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B2EBF2"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <TextView
        android:id="@+id/show_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag1_text">
    </TextView>
    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_btn">
    </Button>
    <Button
        android:id="@+id/btn_previous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/previous_btn">
    </Button>
</LinearLayout>
