<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/mainBackground"
    tools:context="com.aparnyuk.lessons_02.FragmentLesson2">

    <TextView
        android:id="@+id/headFact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/head_fact"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"

        />

    <Button
        android:id="@+id/btnFact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headFact"
        android:text="@string/calculate_operation"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

    <EditText
        android:id="@+id/editFact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headFact"
        android:inputType="number"
        android:hint="@string/enter_number"/>

    <TextView
        android:id="@+id/resFact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editFact"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/headFib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resFact"
        android:text="@string/head_fib"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"

        android:layout_marginTop="40dp" />

    <EditText
        android:id="@+id/editFib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/headFib"
        android:inputType="number"
        android:hint="@string/enter_number"/>

    <Button
        android:id="@+id/btnFib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/headFib"
        android:text="@string/calculate_operation"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/resFib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editFib"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

</RelativeLayout>
